@@ -1,3 +1,7 @@
+2008-02-09  Vincent Untz  <vuntz@gnome.org>
+
+	* configure.in: require gio for the clock
+
 2008-01-29  Elijah Newren <newren gmail com>
 
 	* configure.in: post-release bump to 2.21.91.
